add logout to routes and swagger
